k8s/prod/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: inventario
  namespace: inventario-prod
  labels:
    app.kubernetes.io/name: inventario
    app.kubernetes.io/part-of: inventario
    app.kubernetes.io/component: web
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: inventario
    app.kubernetes.io/component: web
  ports:
    - name: http
      port: 3333
      targetPort: http
